# vuvando_

federated_learning/vuvando/: final_model.pt  log_baseline.txt  log_moreau.txt  plot_comparison.py  plot_results.py
federated_learning/vuvando_baseline/: check_all_patients.py  final_model.pt  log_baseline.txt  pyproject.toml
federated_learning/vuvando_baseline/vuvando/: __init__.py  client_app.py  server_app.py
federated_learning/vuvando_moreau/: README.md  final_model.pt  plot_comparison.py  plot_results.py  pyproject.toml  thesis_moreau_log.txt
federated_learning/vuvando_moreau/vuvando/: client_app.py  server_app.py  task.py
federated_learning_baseline/vuvando/: download_data.py  final_model.pt  plot_results.py  pyproject.toml
federated_learning_baseline/vuvando/vuvando/: task.py
